Fix size jump depending on dropdown selection

--- a/packages/block-library/src/navigation/style.scss
+++ b/packages/block-library/src/navigation/style.scss
@@ -195,6 +195,7 @@
 	.components-custom-select-control__button {
 		height: auto; // overide default button styles
 		margin-bottom: 0; // cancel bottom margin
+		min-width: 220px; // avoids control size jump depending on selection
 
 		// Specificity overide
 		&.components-custom-select-control__button {
